--- a/social/templates/social/list.html
+++ b/social/templates/social/list.html
@@ -1,7 +1,18 @@
+{% if tag %}
+    <h2>Posts tagged with {{tag.name}}</h2>
+{% endif %}
+
+
 {% for post in posts %}
     {{post.description | truncatewords:20|linebreaks }}
     published at {{ post.created}} by {{ post.author }}
     {{ post.tags.all|join:'' }}
+    <br>
+    {%for tag in post.tags.all %}
+        <a href="{%url 'social:post_list_by_tag' tag.slug %}">{{tag.name}}</a>
+        {%if not forloop.last %}, {% endif %}
+    {% endfor %}
+
     <br>
     <br>
 {% endfor%}
