--- a/social/templates/social/list.html
+++ b/social/templates/social/list.html
@@ -4,9 +4,11 @@
 
 
 {% for post in posts %}
-    {{post.description | truncatewords:20|linebreaks }}
+    <a href="{{ post.get_absolute_url }}">
+            {{post.description | truncatewords:20|linebreaks }}
+
+    </a>
     published at {{ post.created}} by {{ post.author }}
-    {{ post.tags.all|join:'' }}
     <br>
     {%for tag in post.tags.all %}
         <a href="{%url 'social:post_list_by_tag' tag.slug %}">{{tag.name}}</a>
