Add search page functionality

--- a/social/templates/forms/create-post.html
+++ b/social/templates/forms/create-post.html
@@ -1,6 +1,10 @@
+{% extends 'parent/base.html' %}
+{% block title %}create post{% endblock %}
+{% block content %}
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">ذخیره</button>
     <!--    <input type="submit" value="ثبت پست">-->
 </form>
+{% endblock %}
