--- a/social/templates/forms/ticket.html
+++ b/social/templates/forms/ticket.html
@@ -1,4 +1,6 @@
-
+{% extends 'parent/base.html' %}
+{% block title %}ticket{% endblock %}
+{% block content %}
 {% if sent %}
     <h1>ایمیل شما به پشتیبانی ارسال شد </h1>
 {% endif %}
@@ -43,3 +45,4 @@
     {%if form.non_field_errors%}
         {{form.non_field_errors}}
     {%endif%}
+{% endblock %}
