--- a/social/templates/social/list.html
+++ b/social/templates/social/list.html
@@ -1,20 +1,24 @@
-{% if tag %}
-    <h2>Posts tagged with {{tag.name}}</h2>
-{% endif %}
+{% extends 'parent/base.html' %}
+{% block title %}post list{% endblock %}
+{% block content %}
+    {% if tag %}
+        <h2>Posts tagged with {{tag.name}}</h2>
+    {% endif %}
 
 
-{% for post in posts %}
-    <a href="{{ post.get_absolute_url }}">
+    {% for post in posts %}
+        <a href="{{ post.get_absolute_url }}">
             {{post.description | truncatewords:20|linebreaks }}
 
-    </a>
-    published at {{ post.created}} by {{ post.author }}
-    <br>
-    {%for tag in post.tags.all %}
-        <a href="{%url 'social:post_list_by_tag' tag.slug %}">{{tag.name}}</a>
-        {%if not forloop.last %}, {% endif %}
-    {% endfor %}
+        </a>
+        published at {{ post.created}} by {{ post.author }}
+        <br>
+        {%for tag in post.tags.all %}
+            <a href="{%url 'social:post_list_by_tag' tag.slug %}">{{tag.name}}</a>
+            {%if not forloop.last %}, {% endif %}
+        {% endfor %}
 
     <br>
     <br>
-{% endfor%}
+    {% endfor%}
+{% endblock %}
