--- a/social/static/css/base.css
+++ b/social/static/css/base.css
@@ -1,3 +1,132 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700");
+
+* {
+	box-sizing: border-box;
+}
+
+body {
+	--h: 212deg;
+	--l: 43%;
+	--brandColor: hsl(var(--h), 71%, var(--l));
+	font-family: Montserrat, sans-serif;
+	margin: 0;
+	background-color: whitesmoke;
+}
+
+p {
+	margin: 30px;
+	line-height: 0.6;
+}
+.post-list{
+	width: 350px;
+	height: 70px;
+	background-color: #f8f7f7;
+	color: #610303;
+	text-align: center;
+	border-top: 5px solid #610303;
+	border-bottom: 5px solid #610303;
+	border-radius: 10px;
+	margin: 20px auto;
+	padding: 10px;
+}
+.post-detail{
+		width: 350px;
+	height: 70px;
+	background-color: #f8f7f7;
+	color: #e04f04;
+	text-align: center;
+	border-top: 5px solid #d34900;
+	border-bottom: 5px solid #d34900;
+	border-radius: 10px;
+	margin: 20px auto;
+	padding: 10px;
+
+}
+ol {
+	list-style: none;
+	counter-reset: list;
+	padding: 0 1rem;
+}
+
+li {
+	--stop: calc(100% / var(--length) * var(--i));
+	--l: 62%;
+	--l2: 88%;
+	--h: calc((var(--i) - 1) * (180 / var(--length)));
+	--c1: hsl(var(--h), 71%, var(--l));
+	--c2: hsl(var(--h), 71%, var(--l2));
+
+	position: relative;
+	counter-increment: list;
+	max-width: 45rem;
+	margin: 2rem auto;
+	padding: 2rem 1rem 1rem;
+	box-shadow: 0.1rem 0.1rem 1.5rem rgba(0, 0, 0, 0.3);
+	border-radius: 0.25rem;
+	overflow: hidden;
+	background-color: white;
+}
+
+li::before {
+	content: '';
+	display: block;
+	width: 100%;
+	height: 1rem;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background: linear-gradient(to right, var(--c1) var(--stop), var(--c2) var(--stop));
+}
+
+h3 {
+	display: flex;
+	align-items: baseline;
+	margin: 0 0 1rem;
+	color: rgb(70 70 70);
+}
+
+h3::before {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex: 0 0 auto;
+	margin-right: 1rem;
+	width: 3rem;
+	height: 3rem;
+	content: counter(list);
+	padding: 1rem;
+	border-radius: 50%;
+	background-color: var(--c1);
+	color: white;
+}
+
+@media (min-width: 40em) {
+	li {
+		margin: 3rem auto;
+		padding: 3rem 2rem 2rem;
+	}
+
+	h3 {
+		font-size: 2.25rem;
+		margin: 0 0 2rem;
+	}
+
+	h3::before {
+		margin-right: 1.5rem;
+	}
+}
+.pagination{
+	width: 400px;
+	margin: 0 auto;
+}
+
+.cm-body{
+	border-radius: 40%;
+	height: 70px;
+}
+
+
+
 /* استایل پایه برای کامنت ها */
 .comment-item {
     background-color: #f8f9fa;
