--- a/social/templates/social/list.html
+++ b/social/templates/social/list.html
@@ -4,21 +4,27 @@
     {% if tag %}
         <h2>Posts tagged with {{tag.name}}</h2>
     {% endif %}
-
-
+    <h1 class="post-list">لیست پست ها </h1>
+<ol style="--length: {{ posts|length }}" role="list">
     {% for post in posts %}
         <a href="{{ post.get_absolute_url }}">
-            {{post.description | truncatewords:20|linebreaks }}
+        <li style="--i: {{ forloop.counter}}">
+            {{post.description | truncatewords:5|linebreaks }}
 
         </a>
-        published at {{ post.created}} by {{ post.author }}
-        <br>
         {%for tag in post.tags.all %}
             <a href="{%url 'social:post_list_by_tag' tag.slug %}">{{tag.name}}</a>
             {%if not forloop.last %}, {% endif %}
         {% endfor %}
+    <br>
+    <br>
+        <p>نویسنده : {{ post.author.first_name }} </p>
+        <p>{{ post.created}} :متنتشر شده در  </p>
 
-    <br>
-    <br>
+    </li>
+
+
     {% endfor%}
+</ol>
+    {% include "partials/pagination.html" with page=posts%}
 {% endblock %}
