--- a/social/templates/social/list.html
+++ b/social/templates/social/list.html
@@ -10,6 +10,7 @@
         <a href="{{ post.get_absolute_url }}">
         <li style="--i: {{ forloop.counter}}">
             {{post.description | truncatewords:5|linebreaks }}
+            <img src="{{ post.images.first.image_file.url }}" alt="{{ post.images.first.title }}">
 
         </a>
         {%for tag in post.tags.all %}
