--- a/social/templates/social/profile.html
+++ b/social/templates/social/profile.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <h1>profile</h1>
-
+<p><a href="{% url 'social:create_post' %}">ایجاد پست جدید</a> </p>
 <table style="width: 80%;border: 2px solid black; text-align: right;direction: rtl;">
     <tr>
         <th>ردیف</th>
