add like and dislike

--- a/social/templates/registration/login.html
+++ b/social/templates/registration/login.html
@@ -9,4 +9,5 @@
             <input type="hidden" name="next", value="{{ next }}">
         <input type="submit" value="ورود">
     </form>
+<a href="{% url 'social:password_reset'%}">ایا رمز خود را فراموش کرده اید؟</a>
 {% endblock %}
