--- a/social/templates/social/detail.html
+++ b/social/templates/social/detail.html
@@ -1,15 +1,27 @@
 {% extends 'parent/base.html' %}
 {% block title %}detail post{% endblock %}
 {% block content %}
-{{ post.description |linebreaks }}
-published at {{ post.created}} by {{ post.author }}
-<br>
+
+<div class="post" data-post-id="{{post.id}}">
+    {{ post.description |linebreaks }}
+    published at {{ post.created}} by {{ post.author }}
+    <br><br>
+    <button class="like-button">
+        {% if request.user in post.likes.all %}
+            UnLike
+        {% else %}
+            Like
+        {% endif %}
+    </button>
+    <span class="likes-count">{{ post.likes.count }}</span>Likes
+</div>
+
 {% for tag in post.tags.all %}
     <a href="{%url 'social:post_list_by_tag' tag.slug %}">{{tag.name}}</a>
     {% if not forloop.last %}, {%endif%}
 {% endfor %}
 
-<h2>Similar Post</h2>
+<h2>پست های مشابه</h2>
 {% for post in similar_post %}
     <p>
         <a href="{{ post.get_absolute_url }}">{{ post.description |truncatewords:10 }}</a>
@@ -51,4 +63,27 @@ published at {{ post.created}} by {{ post.author }}
     </form>
 
     <hr>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script>
+    $(document).ready(function (){
+        $('.like-button').click(function (){
+            var post_id =$(this).closest('.post').data('post-id');
+            var button=$(this);
+            $.ajax({
+                type:'POST',
+                url:"{% url 'social:like_post'%}",
+                data:{'post_id':post_id,'csrfmiddlewaretoken':'{{csrf_token}}'},
+                success: function (data) {
+                    if (data.liked){
+                        button.text('UnLike');
+                    }else{
+                        button.text('Like');
+                    }
+                    $('.likes-count').text(data.likes_count);
+
+                },
+            });
+        });
+    });
+</script>
 {% endblock %}
