--- a/social/templates/social/detail.html
+++ b/social/templates/social/detail.html
@@ -6,6 +6,8 @@
     {{ post.description |linebreaks }}
     published at {{ post.created}} by {{ post.author }}
     <br><br>
+
+
     <button class="like-button">
         {% if request.user in post.likes.all %}
             UnLike
@@ -15,6 +17,14 @@
     </button>
     <span class="likes-count">{{ post.likes.count }}</span>Likes
 </div>
+
+<button class="save-post">
+    {% if request.user in post.save_by.all %}
+        UnSave
+    {% else %}
+        Save
+    {% endif %}
+</button>
 
 {% for tag in post.tags.all %}
     <a href="{%url 'social:post_list_by_tag' tag.slug %}">{{tag.name}}</a>
@@ -82,6 +92,26 @@
                     $('.likes-count').text(data.likes_count);
 
                 },
+            });
+        });
+
+        $('.save-post').click(function (){
+            var button=$(this);
+            $.ajax({
+                type:'POST',
+                url:"/save-post/",
+                data:{'csrfmiddlewaretoken':'{{csrf_token}}','post_id':{{post.id}} },
+                success: function (data) {
+                    if (data.saved){
+                        button.text('UnSave');
+                    }else{
+                        button.text('Save');
+                    }
+
+                },
+                error:function(error){
+                    console.log("ajax:خطا در ارسال درخواست"+erorr);
+                }
             });
         });
     });
