--- a/social/templates/user/user_list.html
+++ b/social/templates/user/user_list.html
@@ -2,18 +2,18 @@
 {% load static %}
 {% for user in users %}
 
-{% if user.photo %}
+{% if user.photo and user.photo.width %}
     <a href="#">
         <img src="{% thumbnail user.photo 200x0 quality=80 %}">
     </a>
 {% else %}
-<img src="{% static 'images/profile/avatar.jpg'%}" width="200px;">
+    <img src="{% static 'images/profile/avatar.jpg'%}" width="200px;">
 {% endif %}
 
 <a href="#">
    {{ user.get_full_name }}
 </a>
-
+<br>
 
 
 
