--- a/social/templates/user/user_list.html
+++ b/social/templates/user/user_list.html
@@ -3,14 +3,16 @@
 {% for user in users %}
 
 {% if user.photo and user.photo.width %}
-    <a href="#">
+    <a href="{{user.get_absolute_url}}">
         <img src="{% thumbnail user.photo 200x0 quality=80 %}">
     </a>
 {% else %}
-    <img src="{% static 'images/profile/avatar.jpg'%}" width="200px;">
+    <a href="{{user.get_absolute_url}}">
+        <img src="{% static 'images/profile/avatar.jpg'%}" width="200px;">
+    </a>
 {% endif %}
 
-<a href="#">
+<a href="{{user.get_absolute_url}}">
    {{ user.get_full_name }}
 </a>
 <br>
