--- a/social/templates/user/user_followers.html
+++ b/social/templates/user/user_followers.html
@@ -2,7 +2,7 @@
 <h2>لیست فالوئرها:</h2>
 
 <ul style="list-style: none;">
-    {% for follower in user.followers.all|slice:"0:5" %}
+    {% for follower in user.followers.all %}
         <li style="margin-bottom: 15px; display: flex; align-items: center;">
 
             {% if follower.photo %}
